--- a/public/partials/setting.html
+++ b/public/partials/setting.html
@@ -1,4 +1,3 @@
-<!-- navbar -->
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
@@ -39,6 +38,7 @@
         <a href="" class="list-group-item" ng-click="selectMenu(4)" ng-class="{active: selectedMenu == 4}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">区域管理</a>
         <a href="" class="list-group-item" ng-click="selectMenu(5)" ng-class="{active: selectedMenu == 5}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">行业管理</a>
         <a href="" class="list-group-item" ng-click="selectMenu(6)" ng-class="{active: selectedMenu == 6}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">代理商管理</a>
+        <a href="" class="list-group-item" ng-click="selectMenu(7)" ng-class="{active: selectedMenu == 7}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">项目类型管理</a>
       </ul>
     </div>
     <div class="col-sm-9" ng-switch="selectedMenu">
@@ -48,8 +48,8 @@
           <div class="alert alert-danger" ng-if="tabs[0].error">{{tabs[0].error}}</div>
           <div class="alert alert-success" ng-if="tabs[0].success">{{tabs[0].success}}</div>
           <div class="form-group">
-            <input type="password" class="form-control" placeholder="密码" required ng-model="tabs[0].pwd">
-            <input type="password" class="form-control" placeholder="确认密码" required ng-model="tabs[0].pwd2">
+            <input type="password" class="form-control" placeholder="密码" required ng-model="tabs[0].pwd"></input>
+            <input type="password" class="form-control" placeholder="确认密码" required ng-model="tabs[0].pwd2"></input>
           </div>
           <div class="form-group">
             <button class="btn btn-primary btn-block" ng-click="tabs[0].save($event, form0)">保存</button>
@@ -69,7 +69,7 @@
           <div class="form-group">
             <div class="row">
               <div class="col-sm-8">
-                <input type="text" class="form-control" ng-model="tabs[1].user.realname" placeholder="昵称" ng-disabled="!tabs[1].user._id">
+                <input type="text" class="form-control" ng-model="tabs[1].user.realname" placeholder="昵称" ng-disabled="!tabs[1].user._id"></input>
               </div>
               <div class="col-sm-4">
                 <button class="btn btn-primary" type="button" ng-click="tabs[1].updateRealname($event)" ng-disabled="!tabs[1].user._id">修改昵称</button>
@@ -101,13 +101,13 @@
           <div class="alert alert-danger" ng-if="tabs[2].error">{{tabs[2].error}}</div>
           <div class="alert alert-success" ng-if="tabs[2].success">{{tabs[2].success}}</div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="用户名" ng-model="tabs[2].newUser.uname" required>
+            <input type="text" class="form-control" placeholder="用户名" ng-model="tabs[2].newUser.uname" required></input>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="昵称" ng-model="tabs[2].newUser.realname" required>
+            <input type="text" class="form-control" placeholder="昵称" ng-model="tabs[2].newUser.realname" required></input>
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" placeholder="密码" ng-model="tabs[2].newUser.pwd" required>
+            <input type="password" class="form-control" placeholder="密码" ng-model="tabs[2].newUser.pwd" required></input>
           </div>
           <div class="form-group">
             <select type="text" class="form-control" ng-model="tabs[2].newUser.role" ng-init="tabs[2].newUser.role = 'supporter'">
@@ -126,7 +126,7 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             销售(111)
-            <button class="btn btn-primary btn-xs pull-right">
+            <button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#salesModal" data-backdrop="static">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
           </div>
@@ -147,22 +147,241 @@
             <tr>
               <th>名称</th>
               <th>电话</th>
-              <th>所属团队</th>
+              <th>所属分公司</th>
+              <th></th>
             </tr>
             <tr>
               <td>123</td>
               <td>123</td>
               <td>123</td>
+              <td>
+                <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#salesModal" data-backdrop="static">
+                  <span class="glyphicon glyphicon-edit"></span>
+                </button>
+              </td>
             </tr>
           </table>
+          <ul class="pagination">
+            <li class="disabled"><a href="">&laquo;</a>
+            </li>
+            <li class="active"><a href="">1</a>
+            </li>
+            <li><a href="">2</a>
+            </li>
+            <li><a href="">3</a>
+            </li>
+            <li><a href="">4</a>
+            </li>
+            <li><a href="">5</a>
+            </li>
+            <li><a href="">&raquo;</a>
+            </li>
+          </ul>
         </div>
       </div>
       <!-- 区域管理 -->
-      <div class="row" ng-switch-when="4">4</div>
+      <div class="row" ng-switch-when="4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            区域管理
+            <button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#areaModal" data-backdrop="static" ng-click="tabs[4].selectedArea = {managers:[]}">
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+            <div class="clearfix"></div>
+          </div>
+          <table class="table table-hover">
+            <tr>
+              <th>区域</th>
+              <th>经理</th>
+              <th></th>
+            </tr>
+            <tr ng-repeat="area in tabs[4].areaData.list">
+              <td>{{area.name}}</td>
+              <td>
+                <span ng-repeat="m in area.managers">{{m.name}}, </span>
+              </td>
+              <td>
+                <button class="btn btn-default btn-xs">
+                  <span class="glyphicon glyphicon-edit"></span>
+                </button>
+              </td>
+            </tr>
+          </table>
+          <ul class="pagination">
+            <li ng-class="{disabled: tabs[4].areaData.minPage == 1}" ng-click="tabs[4].prePages(tabs[4].areaData)"><a href="">&laquo;</a>
+            </li>
+            <li ng-repeat="p in tabs[4].areaData.pageArr" ng-class="{active: p == tabs[4].areaData.curPage}" ng-click="tabs[4].goPage(tabs[4].areaData, p)"><a href="">{{p}}</a>
+            </li>
+            <li ng-class="{disabled: tabs[4].areaData.maxPage == areaData.totalPage}" ng-click="tabs[4].nextPages(tabs[4].areaData)"><a href="">&raquo;</a>
+            </li>
+          </ul>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            分公司管理
+            <button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#areaModal" data-backdrop="static">
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+            <div class="clearfix"></div>
+          </div>
+          <table class="table table-hover">
+            <tr>
+              <th>分公司</th>
+              <th>经理</th>
+              <th></th>
+            </tr>
+            <tr>
+              <td>123</td>
+              <td>123</td>
+              <td>
+                <button class="btn btn-default btn-xs">
+                  <span class="glyphicon glyphicon-edit"></span>
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <td>123</td>
+              <td>123</td>
+              <td>
+                <button class="btn btn-default btn-xs">
+                  <span class="glyphicon glyphicon-edit"></span>
+                </button>
+              </td>
+            </tr>
+          </table>
+          <ul class="pagination">
+            <li class="disabled"><a href="">&laquo;</a>
+            </li>
+            <li class="active"><a href="">1</a>
+            </li>
+            <li><a href="">2</a>
+            </li>
+            <li><a href="">3</a>
+            </li>
+            <li><a href="">4</a>
+            </li>
+            <li><a href="">5</a>
+            </li>
+            <li><a href="">&raquo;</a>
+            </li>
+          </ul>
+        </div>
+      </div>
       <!-- 行业管理 -->
       <div class="row" ng-switch-when="5">5</div>
       <!-- 代理商管理 -->
       <div class="row" ng-switch-when="6">6</div>
+      <!-- 项目类型管理 -->
+      <div class="row" ng-switch-when="7">7</div>
     </div>
   </div>
 </div>
+
+
+<!-- 添加销售 -->
+<div id="salesModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">销售管理</h4>
+      </div>
+      <div class="modal-body">
+        <form name="formSales" class="form-horizontal">
+          <div class="form-group">
+            <label class="control-label col-sm-2">名称</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control"></input>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2">电话</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control"></input>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2">区域</label>
+            <div class="col-sm-10">
+              <select class="form-control"></select>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2">分公司</label>
+            <div class="col-sm-10">
+              <select class="form-control"></select>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2">团队</label>
+            <div class="col-sm-10">
+              <select class="form-control"></select>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="submit" class="btn btn-primary">保存</button>
+      </div>
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
+
+<!-- 添加区域 -->
+<div id="areaModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">区域/分公司 管理</h4>
+      </div>
+      <div class="modal-body">
+        <form name="areaForm" class="form-horizontal">
+          <div class="form-group">
+            <label class="control-label col-sm-2">名称</label>
+            <div class="col-sm-10">
+              <input class="form-control" ng-model="tabs[4].selectedArea.name"></input>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2">经理</label>
+            <div class="col-sm-10">
+              <ul class="list-unstyled">
+                <li ng-repeat="m in tabs[4].selectedArea.managers">
+                  {{m.name}}
+                  <button class="btn btn-default btn-xs" ng-click="tabs[4].selectedArea.managers.splice($index, 1)">x</button>
+                </li>
+              </ul>
+              <div class="input-group">
+                <input class="form-control" ng-model="tabs[4].newManager.name"></input>
+                <span class="input-group-btn">
+                  <button class="btn btn-default" ng-click="tabs[4].addManager()">
+                    <span class="glyphicon glyphicon-plus"></span>
+                  </button>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2">所属区域</label>
+            <div class="col-sm-10">
+              <select class="form-control">
+                <option value=""></option>
+              </select>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" ng-click="tabs[4].save()">保存</button>
+      </div>
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
