--- a/public/partials/setting.html
+++ b/public/partials/setting.html
@@ -126,20 +126,17 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             销售(111)
-            <button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#salesModal" data-backdrop="static">
+            <button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#salesModal" data-backdrop="static" ng-disabled="!tabs[3].company">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
           </div>
           <div class="panel-body">
             <form class="form-inline">
-              <select class="form-control">
+              <select class="form-control" ng-model="tabs[3].area" ng-options="a as a.name for a in tabs[3].areaData.list" ng-change="tabs[3].changeArea()">
                 <option value="">区域</option>
               </select>
-              <select class="form-control">
+              <select class="form-control" ng-model="tabs[3].company" ng-options="c as c.name for c in tabs[3].area.companies" ng-change="tabs[3].changeCompany()">
                 <option value="">分公司</option>
-              </select>
-              <select class="form-control">
-                <option value="">团队</option>
               </select>
             </form>
           </div>
@@ -150,10 +147,10 @@
               <th>所属分公司</th>
               <th></th>
             </tr>
-            <tr>
-              <td>123</td>
-              <td>123</td>
-              <td>123</td>
+            <tr ng-repeat="s in tabs[3].salesData">
+              <td>{{s.name}}</td>
+              <td>{{s.phone}}</td>
+              <td>{{s.company.name}}</td>
               <td>
                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#salesModal" data-backdrop="static">
                   <span class="glyphicon glyphicon-edit"></span>
@@ -161,22 +158,14 @@
               </td>
             </tr>
           </table>
-          <ul class="pagination">
-            <li class="disabled"><a href="">&laquo;</a>
+         <!--  <ul class="pagination">
+            <li ng-class="{disabled: !tabs[3].salesData.minPage || tabs[3].salesData.minPage <= 1}" ng-click="tabs[3].prePages(tabs[3].salesData)"><a href="">&laquo;</a>
             </li>
-            <li class="active"><a href="">1</a>
+            <li ng-repeat="p in tabs[3].salesData.pageArr" ng-class="{active: p == tabs[3].salesData.curPage}" ng-click="tabs[3].goPage(tabs[3].salesData, p)"><a href="">{{p}}</a>
             </li>
-            <li><a href="">2</a>
+            <li ng-class="{disabled: !tabs[3].salesData.maxPage || tabs[3].salesData.maxPage >= tabs[3].salesData.totalPage}" ng-click="tabs[3].nextPages(tabs[3].salesData)"><a href="">&raquo;</a>
             </li>
-            <li><a href="">3</a>
-            </li>
-            <li><a href="">4</a>
-            </li>
-            <li><a href="">5</a>
-            </li>
-            <li><a href="">&raquo;</a>
-            </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
       <!-- 区域管理 -->
@@ -275,38 +264,34 @@
           <div class="form-group">
             <label class="control-label col-sm-2">名称</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control"></input>
+              <input type="text" class="form-control" required ng-model="tabs[3].selectedSales.name"></input>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2">电话</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control"></input>
+              <input type="text" class="form-control" ng-model="tabs[3].selectedSales.phone"></input>
             </div>
           </div>
+          <!--   
           <div class="form-group">
             <label class="control-label col-sm-2">区域</label>
             <div class="col-sm-10">
-              <select class="form-control"></select>
+              <select class="form-control" ng-model="tabs[3].selectedSales.name"></select>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2">分公司</label>
             <div class="col-sm-10">
-              <select class="form-control"></select>
-            </div>
+              <select class="form-control" ng-model="tabs[3].selectedSales.company"></select>
+            </div> 
           </div>
-          <div class="form-group">
-            <label class="control-label col-sm-2">团队</label>
-            <div class="col-sm-10">
-              <select class="form-control"></select>
-            </div>
-          </div>
+          -->
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="submit" class="btn btn-primary">保存</button>
+        <button type="submit" class="btn btn-primary" ng-click="tabs[3].save(formSales)">保存</button>
       </div>
     </div>
     <!-- /.modal-content -->
